syntax = "proto3";

option java_package = "com.sharan.grpc";

service user{
    rpc login(LoginRequest)  returns (APIResponse);
    rpc logout(Empty)  returns (APIResponse);

    rpc GreetManyTimesServerStream(GreetManyTimesRequest) returns (stream GreetManyTimesResponse);
    rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {};
    rpc GreetEveryone (stream GreetEveryoneRequest) returns (stream GreetEveryoneResponse);
}

message LoginRequest{
    string username = 1 ;
    string password = 2 ;
}

message APIResponse{
    string responsemessage = 1;
    int32  responseCode  = 2;
}

message Empty{
}

message GreetManyTimesRequest {
    Greeting greeting = 1;
}

message GreetManyTimesResponse {
    string result = 1;
}

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}

message GeetResponse {
    string result = 1;
}

message LongGreetRequest {
    Greeting greeting = 1;
}

message LongGreetResponse{
    string result = 1;
} 

message GreetEveryoneRequest {
    Greeting greeting = 1;
}

message GreetEveryoneResponse {
    string result = 1;
}